<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.sourabhverma.cultino.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".login.LoginActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/ProfileCard"

            android:layout_width="@dimen/two_hundred_dp"
            android:layout_height="@dimen/two_hundred_dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:cardElevation="@dimen/sixteen_dp"
            app:cardCornerRadius="@dimen/two_hundred_dp"
            >

            <ImageView
                android:id="@+id/ProfileImage"

                app:loadImage="@{context}"

                android:scaleType="centerCrop"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:contentDescription="@string/content_description"
                />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/nameEdit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/sixteen_dp"

            android:autofillHints="name"

            android:background="@null"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:padding="@dimen/eight_dp"

            app:layout_constraintBottom_toTopOf="@id/emailEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ProfileCard"
            />

        <EditText
            android:id="@+id/emailEdit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/nameEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:checkAndShowError="@{emailEdit.text.toString().trim()}"

            android:layout_margin="@dimen/sixteen_dp"

            android:padding="@dimen/eight_dp"

            android:background="@null"

            android:hint="@string/enter_email"

            android:autofillHints="emailAddress"

            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/submitButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/sixteen_dp"

            android:padding="@dimen/eight_dp"

            android:onClick="@{()->viewModel.setOnSubmitButtonClick(nameEdit.getText().toString().trim(), emailEdit.getText().toString().trim(), context)}"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/goButton"
            app:layout_constraintTop_toBottomOf="@id/emailEdit"

            android:text="@string/submit"/>

        <Button
            android:id="@+id/goButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/sixteen_dp"

            android:padding="@dimen/eight_dp"

            app:layout_constraintStart_toEndOf="@id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/submitButton"
            app:layout_constraintBottom_toBottomOf="@id/submitButton"

            android:text="@string/go_to_next_activity"/>

        <TextView
            android:id="@+id/nameText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{viewModel.setName(context)}"
            android:textSize="@dimen/twenty_sp"

            android:layout_margin="@dimen/sixteen_dp"

            app:layout_constraintTop_toBottomOf="@id/submitButton"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/emailText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{viewModel.setEmail(context)}"
            android:textSize="@dimen/twenty_sp"

            android:layout_margin="@dimen/sixteen_dp"

            app:layout_constraintTop_toBottomOf="@id/nameText"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>